--- a/commentapp/templates/commentapp/delete.html
+++ b/commentapp/templates/commentapp/delete.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% block content %}
   <div style="text-align: center; max-width: 500px; margin: 3rem auto;">
-    <h3>댓글 `{{ target_comment.title }}` 을 삭제하시겠습니까? </h3>
+    <h3>댓글을 삭제하시겠습니까? </h3>
     <form action="{% url 'commentapp:delete' pk=target_comment.pk %}" method="post">
       {% csrf_token %}
       <input type="submit" class="btn btn-danger rounded-pill col-6 mt-3">
