--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -28,9 +28,9 @@
       {% endif %}
       <hr>
     {% for comment in target_article.comment.all %}
-      {% include 'commentapp/detail.html' with comment=comment %}
+      {% include 'commnetapp/detail.html' with comment=comment %}
     {% endfor %}
-    {% include 'commentapp/create.html' with article=target_article %}
+    {% include 'commnetapp/create.html' with article=target_article %}
     </div>
   </div>
 {% endblock %}
