--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -6,11 +6,13 @@
   <style>
 
     .container {
-
+      display: flex;
       padding: 0;
       margin: 0 auto;
       margin-top: 2rem;
+
     }
+
 
     .container a {
       width: 42%;
@@ -30,13 +32,34 @@
       border-radius: 1rem;
     }
 
+    .container .img_text {
+      display: block;
+      text-align: center;
+      width: 95%;
+      top: 45%;
+      left: 50%;
+      transform: translate(-50%, -65%);
+      max-height: 90px;
+      color: white;
+      font-family: 'Do Hyeon';
+      filter: drop-shadow(1px 1px 5px rgb(0, 0, 0)) drop-shadow(1px 1px 5px rgb(0, 0, 0)) drop-shadow(1px 1px 5px rgb(0, 0, 0));
+      position: absolute;
+      display: inline;
+      vertical-align: middle;
+      margin: 0.1rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      font-size: 1.25rem;
+    }
+
   </style>
   {% if article_list %}
     <div class="container">
       {% for article in article_list %}
-        <a href="{% url 'articleapp:detail' pk=article.pk %}">
-          {% include 'snippets/card.html' with article=article %}
-        </a>
+          <a class='card' href="{% url 'articleapp:detail' pk=article.pk %}">
+            {% include 'snippets/card.html' with article=article %}
+          <p class="img_text">{{ article.title }}</p>
+          </a>
       {% endfor %}
     </div>
     <script src="{% static 'js/magicgrid.js' %}"></script>
