--- a/templates/header.html
+++ b/templates/header.html
@@ -43,7 +43,7 @@
         </a>
       </li>
     <li class="nav-item">
-          <a href="{% url 'subscribeapp:list' %}">
+          <a href="{% url 'projectapp:create' %}">
             <div class="nav">게시판</div>
           </a>
         </li>
