--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -71,7 +71,7 @@
   {% include 'snippets/pagination.html' with page_obj=page_obj %}
   <div style="text-align: center;">
     <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
-      Create Article
+      글작성
     </a>
   </div>
 {% endblock %}
