--- a/projectapp/templates/projectapp/create.html
+++ b/projectapp/templates/projectapp/create.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% block content %}
   <div style="text-align: center; max-width: 500px; margin: 3rem auto;">
-    <h3>Project Create</h3>
+    <h3>게시판 만들기</h3>
     <form action="{% url 'projectapp:create' %}" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {% bootstrap_form form %}
