--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -43,7 +43,7 @@
   {% include 'snippets/pagination.html' with page_obj=page_obj %}
   <div style="text-align: center;">
     <a href="{% url 'projectapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
-      Create Article
+      게시판 추가
     </a>
   </div>
 {% endblock %}
