--- a/templates/snippets/list_fragment.html
+++ b/templates/snippets/list_fragment.html
@@ -42,6 +42,6 @@
 {% include 'snippets/pagination.html' with page_obj=page_obj %}
 <div style="text-align: center;">
   <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
-    Create Article
+    글작성
   </a>
 </div>
