[*} css 스타일 변경

--- a/templates/snippets/list_fragment.html
+++ b/templates/snippets/list_fragment.html
@@ -30,6 +30,7 @@
     {% for article in article_list %}
       <a href="{% url 'articleapp:detail' pk=article.pk %}">
         {% include 'snippets/card.html' with article=article %}
+        <p class="img_text">{{ article.title }}</p>
       </a>
     {% endfor %}
   </div>
