--- a/static/base.css
+++ b/static/base.css
@@ -69,6 +69,26 @@
   text-align: center;
 }
 
+.container .img_text {
+      display: block;
+      text-align: center;
+      width: 95%;
+      top: 45%;
+      left: 50%;
+      transform: translate(-50%, -65%);
+      max-height: 90px;
+      color: white;
+      font-family: 'Do Hyeon';
+      filter: drop-shadow(1px 1px 5px rgb(0, 0, 0)) drop-shadow(1px 1px 5px rgb(0, 0, 0)) drop-shadow(1px 1px 5px rgb(0, 0, 0));
+      position: absolute;
+      display: inline;
+      vertical-align: middle;
+      margin: 0.1rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+      font-size: 1.25rem;
+    }
+
 @media screen and (max-width:500px) {
   html {
     font-size: 13px
