--- a/templates/head.html
+++ b/templates/head.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Title</title>
+  <title>Project Django</title>
   {#  제이쿼리#}
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
           integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
