--- a/commentapp/templates/commnetapp/detail.html
+++ b/commentapp/templates/commnetapp/detail.html
@@ -2,7 +2,22 @@
 <div style="border: 1px solid; text-align: left; padding: 4%; margin: 1rem 0; border-radius: 1rem; border-color:#bbb;">
   <div>
     <strong>
-      {{ comment.writer.profile.nickname }}
+      <a href="{% url 'accountapp:detail' pk=comment.writer.pk %}">
+
+            {% if comment.writer.profile.image %}
+              <img style="height: 1.7rem;
+                  width:  1.7rem;
+                  border-radius: 2rem;
+                  object-fit: cover;" src="{{ comment.writer.profile.image.url }}"/>
+
+
+            {% endif %}
+            {% if comment.writer.profile.nickname %}
+              {{ comment.writer.profile.nickname }}
+            {% else %}
+              #user{{ comment.writer.pk }}
+            {% endif %}
+          </a>
     </strong>
     &nbsp&nbsp&nbsp&nbsp
     <small>
